# GLES_Cube

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cube.cpp  cube.h  ebo.cpp  ebo.h  globject.h  native-lib.cpp  shader.cpp  shader.h  shaders.h  vao.h  vbo.cpp  vbo.h
app/src/main/java/com/example/gles_cube/: JNILib.java  JNIView.java  MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
